istio/4-apps-setup/lambda-namespace.yaml
# Namespace Definition
apiVersion: v1
kind: Namespace
metadata:
  name: lambda
  labels:
    name: lambda
    istio-injection: enabled
