istio/4-apps-setup/oshell-pod.yaml
# Pod Definition (ONLY for LEARNING PURPOSE)
# NOT TO BE USED IN PRODUCTION ENVIRONMENT
# Use Deployment (Kind) instead of Pod
apiVersion: v1
kind: Pod
metadata:
  name: oshell-pod
  namespace: lambda
  labels:
    # Labels used for Selection in Service
    app: oshell-pod
    release: stable
spec:
  containers:
  - name: oshell-container
    image: metamagic/oshell
    # Use Always ONLY for Development purpose.
    imagePullPolicy: Always
    ports:
    # Port Exposed by the Container
    - containerPort: 80
    resources:
    # QoS : Burstable
      limits:
        cpu: 500m
        memory: 256Mi
      requests:
        cpu: 250m
        memory: 128Mi
