istio/4-apps-setup/ws-service.yaml
# App Server for the Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  namespace: lambda
  labels:
    app: ws-service
spec:
  # Type Cluster IP, Load Balancer, Node Port etc.
  # Cluster IP Automatically assigned by Kubernetes
  type: ClusterIP
  ports:
  - port: 80
    # Port Exposed by the Container
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ws-pod
    release: stable
    organization: MetaArivu
